<resources>
    <string name="app_name">Colegio Teresa de la Parra</string>
    <string name="enter_email">Ingresa tu email</string>
    <string name="enter_password">Ingresa tu contraseña</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="personal_data">Datos personales</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="phone">Número Telefónico</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Clave</string>
    <string name="sign_up">Registrarme</string>
    <string name="question_dont_have_account">¿No tienes una cuenta?</string>
    <string name="question_have_account">¿Ya tienes una cuenta?</string>
    <string name="tab_public_events">Eventos Públicos</string>
    <string name="tab_subscriptions">Suscripciones</string>
    <string name="tab_my_events">Mis Eventos</string>
    <string name="subscribe">Suscribirse</string>
    <string name="create_event">Crear Evento</string>
    <string name="edit_event">Editar Evento</string>
    <string name="address">Dirección</string>
    <string name="date">Fecha</string>
    <string name="hour">Hora</string>
    <string name="create">Crear</string>
    <string name="edit">Editar</string>
    <string name="fill_form">Por favor rellenar todo el formulario</string>
</resources>