<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.SignupActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_marginHorizontal="12dp"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:textStyle="bold"
                android:text="@string/personal_data"
                android:layout_marginHorizontal="24dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_name"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:boxBackgroundMode="filled"
                    app:boxBackgroundColor="@null"
                    android:layout_marginHorizontal="24dp">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/name"
                        android:backgroundTint="@android:color/transparent"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:textSize="6pt"
                        android:textColor="@color/black">
                    </androidx.appcompat.widget.AppCompatEditText>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_last_name"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    app:boxBackgroundMode="filled"
                    app:boxBackgroundColor="@null"
                    android:layout_marginHorizontal="24dp">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/last_name"
                        android:backgroundTint="@android:color/transparent"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:inputType="textPersonName"
                        android:textSize="6pt"
                        android:textColor="@color/black">
                    </androidx.appcompat.widget.AppCompatEditText>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_phone"
                    app:boxBackgroundMode="filled"
                    app:boxBackgroundColor="@null"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="24dp">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/phone"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:textSize="6pt"
                        android:textColor="@color/black">
                    </androidx.appcompat.widget.AppCompatEditText>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_email"
                    app:boxBackgroundMode="filled"
                    app:boxBackgroundColor="@null"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="24dp">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/email"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textSize="6pt"
                        android:textColor="@color/black">
                    </androidx.appcompat.widget.AppCompatEditText>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="5dp"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_password"
                    app:boxBackgroundMode="filled"
                    app:boxBackgroundColor="@null"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginHorizontal="24dp">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="6pt"
                        android:textColor="@color/black">
                    </androidx.appcompat.widget.AppCompatEditText>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/opt_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"

        app:layout_constraintTop_toBottomOf="@id/card_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>



    <LinearLayout
        android:id="@+id/opt_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/opt_sign_up"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="22sp"
            android:text="@string/question_have_account" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/purple_500"
            android:textSize="22sp"
            android:text="@string/sign_in" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>